ganti nama folder jadi bhs-indo

--- a/bhs-indo/manifest.json
+++ b/bhs-indo/manifest.json
@@ -1,18 +1,18 @@
 {
   "name": "Aplikasi Buku",
   "short_name": "BukuBuku",
-  "start_url": "/",
+  "start_url": "/bhs-indo/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "/bhs-indo/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "/bhs-indo/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
